Fix auto scrolling on mobile 2

--- a/styles/style.css
+++ b/styles/style.css
@@ -881,6 +881,18 @@ section {
   .praise_container {
     display: flex;
     flex-direction: column-reverse;
+    width: 100%;
+    aspect-ratio: 2/1;
+    padding: 20px 20px;
+    margin: 5px;
+    border: solid white 1px;
+    border-radius: 5px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: auto;
+    background: #37517e;
   }
 }
 
@@ -1052,6 +1064,18 @@ section {
   .praise_container {
     display: flex;
     flex-direction: column-reverse;
+    width: 100%;
+    aspect-ratio: 2/1;
+    padding: 20px 20px;
+    margin: 5px;
+    border: solid white 1px;
+    border-radius: 5px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: auto;
+    background: #37517e;
   }
 }
 
@@ -1070,6 +1094,18 @@ section {
   .praise_container {
     display: flex;
     flex-direction: column-reverse;
+    width: 100%;
+    aspect-ratio: 2/1;
+    padding: 20px 20px;
+    margin: 5px;
+    border: solid white 1px;
+    border-radius: 5px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: auto;
+    background: #37517e;
   }
 }
 
@@ -1080,6 +1116,18 @@ section {
   .praise_container {
     display: flex;
     flex-direction: column-reverse;
+    width: 100%;
+    aspect-ratio: 2/1;
+    padding: 20px 20px;
+    margin: 5px;
+    border: solid white 1px;
+    border-radius: 5px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: auto;
+    background: #37517e;
   }
 }
 
